--- a/location.html
+++ b/location.html
@@ -10,7 +10,7 @@
         <address class="location">
             <div class="location_maps">
              <div class="botones">
-                <a href="./index.html" class="btn"><img src="./src/img/path_2.svg" alt="icon-flecha" class="icon"> Our Location</a>
+                <a href="/index.html" class="btn"><img src="./src/img/path_2.svg" alt="icon-flecha" class="icon"> Our Location</a>
              </div>
              <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2989.18024208519!2d-71.31098142149668!3d41.47869195332491!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2ses!4v1747332255007!5m2!1ses-419!2ses" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -44,6 +44,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
