--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>MODERN ART GALLERY</h1>
           <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
           <div class="botones">
-            <a href="./location.html" class="btn">Our Location <img src="data:image/svg+xml,%3csvg%20width='10'%20height='26'%20viewBox='0%200%2010%2026'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20id='Path%202'%20d='M1%201L9%2013L1%2025'%20stroke='white'/%3e%3c/svg%3e" alt="icon-flecha" class="icon"></a>
+            <a href="/art_gallery/location.html" class="btn">Our Location <img src="data:image/svg+xml,%3csvg%20width='10'%20height='26'%20viewBox='0%200%2010%2026'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20id='Path%202'%20d='M1%201L9%2013L1%2025'%20stroke='white'/%3e%3c/svg%3e" alt="icon-flecha" class="icon"></a>
           </div>
         </div>
       </div>
