--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1>MODERN ART GALLERY</h1>
           <p>The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
           <div class="botones">
-            <a href="/art_gallery/location.html" class="btn">Our Location <img src="./src/img/path.svg" alt="icon-flecha" class="icon"></a>
+            <a href="./location.html" class="btn">Our Location <img src="./src/img/path.svg" alt="icon-flecha" class="icon"></a>
           </div>
         </div>
       </div>
@@ -59,6 +59,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
