--- a/location.html
+++ b/location.html
@@ -44,6 +44,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/js/location.js"></script>
 </body>
 </html>
