--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/src/"></script>
+    <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
