--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         </div>  
   
         <div class="footer_social">
-            <img src="./src/img/icon_face.svg" alt="icon-face" class="footer_social-icon">
-            <img src="./src/img/icon_insta.svg" alt="icon-insta" class="footer_social-icon">
-            <img src="./src/img/icon_tw.svg" alt="" class="footer_social-icon">
+          <a href="#"><img src="./src/img/icon_face.svg" alt="icon-face" class="footer_social-icon"></a>
+          <a href="#"><img src="./src/img/icon_insta.svg" alt="icon-insta" class="footer_social-icon"></a>
+          <a href="#"><img src="./src/img/icon_tw.svg" alt="" class="footer_social-icon"></a> 
         </div>
       </div>
     </footer>
