--- a/location.html
+++ b/location.html
@@ -38,9 +38,9 @@
         </div>  
   
         <div class="footer_social _location">
-            <img src="./src/img/icon_face_black.svg" alt="icon-face" class="footer_social-icon">
-            <img src="./src/img/icon_insta_black.svg" alt="icon-insta" class="footer_social-icon">
-            <img src="./src/img/icon_tw_black.svg" alt="" class="footer_social-icon">
+          <a href="#"><img src="./src/img/icon_face_black.svg" alt="icon-face" class="footer_social-icon"></a>
+          <a href="#"><img src="./src/img/icon_insta_black.svg" alt="icon-insta" class="footer_social-icon"></a>
+          <a href="#"><img src="./src/img/icon_tw_black.svg" alt="" class="footer_social-icon"></a>
         </div>
       </div>
     </footer>
