--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>location Moder Art Gallery</title>
 </head>
 <body>
     <section>
