--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>location Moder Art Gallery</title>
   <script type="module" crossorigin src="/art_gallery/assets/location-ChpqQ_BH.js"></script>
   <link rel="modulepreload" crossorigin href="/art_gallery/assets/main-DDVpQhyj.js">
   <link rel="stylesheet" crossorigin href="/art_gallery/assets/main-CbxxKV71.css">
